# confargs

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: lint.yml  test.yml
examples/: clap.rs  conf.toml
src/: lib.rs  toml.rs
tests/crates/print-args/: Cargo.toml
tests/crates/print-args/src/: main.rs
