[package]
name = "confargs"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
description = "Parse configuration files into a set arguments"
authors = ["Roman Volosatovs"]
repository = "https://github.com/rvolosatovs/confargs"
categories = ["command-line-interface", "config", "parsing"]
keywords = ["cli", "config", "configuration", "arg", "argument"]

[dependencies]
anyhow = { version = "1.0.57", default-features = false, features = ["std"] }
toml = { version = "0.5.9", default-features = false }

[dev-dependencies]
clap = { version = "3.2.3", default-features = false, features = ["derive", "std"] }
tempfile = { version = "3.3.0", default-features = false }
print-args = { path = "./tests/crates/print-args", artifact = "bin" }
